--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,6 @@ dependencyResolutionManagement {
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
-rootProject.name = "Bookstat"
+rootProject.name = "kotui"
 include ':app'
 include ':kotui'
